@@ -223,6 +223,7 @@ export("+.section",
        swN2,
        swPressure,
        swRho,
+       swRrho,
        swSCTp,
        swSigma,
        swSigmaT,
