@@ -1,4 +1,5 @@
 0.9-13
+- swRrho() added
 - plotProfile() now accepts type="o"
 - read.adv.nortek(): read salinity
 - ctdDecimate(): fix bug for NULL columns [issue 327]
